Fixed links, tabs and status color contrast accessibility issues

--- a/dts/source/scss/base/_foundational.scss
+++ b/dts/source/scss/base/_foundational.scss
@@ -31,7 +31,7 @@ hr {
 }
 
 a {
-  color: $dts-undrr-teal-brand;
+  color: $dts-iris-400;
   text-decoration: none;
 }
 
