--- a/dts/source/scss/components/_footer.scss
+++ b/dts/source/scss/components/_footer.scss
@@ -49,7 +49,7 @@
       font-family: "Roboto Condensed", sans-serif;
 
       &:hover {
-        color: #ffffff;
+        color: $dts-coal-600;
         border: 1px solid #9abbd6;
         background-color: #9abbd6;
       }
@@ -81,7 +81,6 @@
     list-style: none;
 
     a {
-      text-decoration: none;
       color: #fff;
       font-size: 1.4rem;
     }
