--- a/dts/source/scss/components/_metadata.scss
+++ b/dts/source/scss/components/_metadata.scss
@@ -5,7 +5,7 @@
   gap: $dts-spacing-8;
 
   &--highlight {
-    background-color: $dts-cerulean-100;
+    background-color: $dts-coal-100;
     padding: $dts-spacing-16;
   }
 
