--- a/dts/source/scss/components/_status.scss
+++ b/dts/source/scss/components/_status.scss
@@ -1,26 +1,26 @@
 .dts-status {
   display: inline-block;
-  width: .8rem;
-  height: .8rem;
+  width: 1rem;
+  height: 1rem;
   border-radius: 50%;
 
   &--draft {
-    background-color: $dts-vis-vis;
+    border: 1px solid $dts-coal-600;
   }
 
   &--wait-info {
-    background-color: $dts-gimblet;
+    background-color: $dts-tango-600;
   }
 
   &--wait-valid {
-    background-color: $dts-turbo;
+    background-color: $dts-violet-500;
   }
 
   &--published {
-    background-color: $dts-teal-700;
+    background-color: $dts-killarney-500;
   }
 
   &--undrr {
-    background-color: $dts-cerulean-200;
+    background-color: $dts-cerulean-400;
   }
 }
